# harfeast_apex_openenv_hackathon

./: .gitignore  BRIEFING.md  Dockerfile  HF_SPACES_DEPLOY.md  OPENENV_PLAN.md  README.md  RESULTS.md  REWARD_FUNCTIONS.md  TRAINING_RESULTS.md  eval_harfeast.py  generate_plots.py  harfeast_synthetic_world_generator.py  harfeast_training.ipynb  requirements.txt  run_environment.py  run_openenv_client.py  train_harfeast.py  train_harfeast_colab.py  train_multiturn.py  training.sh  visualize_training.py
ckpt_v4_q25/: train_log.jsonl  training_results.json
harfeast_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
harfeast_env/server/: __init__.py  app.py  harfeast_environment.py
harfeast_openenv/: __init__.py  actions.py  environment.py  rewards.py  rubric.py  schemas.py
harfeast_world/: ground_truth.json  tasks.json
harfeast_world/data/: aptean_report_data.csv  attached_wage_data.csv  bls_wage_benchmark.csv  employee_survey.csv  equipment_data.csv  oee_assumptions.csv  plant_labor.csv  plant_unit_sales.csv  quality_losses.csv
harfeast_world/documents/: aptean_report.txt
harfeast_worlds/: all_tasks.json  manifest.json
harfeast_worlds/world_0000/: ground_truth.json  tasks.json
harfeast_worlds/world_0001/: ground_truth.json  tasks.json
harfeast_worlds/world_0002/: ground_truth.json  tasks.json
harfeast_worlds/world_0003/: ground_truth.json  tasks.json
harfeast_worlds/world_0004/: ground_truth.json  tasks.json
scripts/: cleanup_old_runs.sh  export_wandb_plots.py
wandb_export/: README.md  run_history.csv
(+480 files in other folders)
